Fix spacing issues introduced by new default stylesheet; Fix HTML <title> issue with news page

--- a/root/assets/css/ucsf/basic.css
+++ b/root/assets/css/ucsf/basic.css
@@ -12,6 +12,7 @@
 body {
     background-color: #88bbbb;
     font-family: Helvetica, Verdana, Arial, sans-serif;
+    line-height: normal;
 }
 
 body.front-page h1#header {
